@@ -16,6 +16,7 @@ CONFIG_MAKE_WARN_UNDEFINED_VARIABLES=y
 # Bootloader config
 #
 CONFIG_BOOTLOADER_INIT_SPI_FLASH=y
+CONFIG_BOOTLOADER_DISABLE_JTAG_IO=
 CONFIG_LOG_BOOTLOADER_LEVEL_NONE=
 CONFIG_LOG_BOOTLOADER_LEVEL_ERROR=
 CONFIG_LOG_BOOTLOADER_LEVEL_WARN=
@@ -169,25 +170,7 @@ CONFIG_ESP_ERR_TO_NAME_LOOKUP=y
 #
 CONFIG_SCAN_AP_MAX=32
 CONFIG_WIFI_TX_RATE_SEQUENCE_FROM_HIGH=y
-CONFIG_ESP8266_WIFI_DEBUG_LOG_ENABLE=y
-CONFIG_ESP8266_WIFI_DEBUG_LOG_ERROR=y
-CONFIG_ESP8266_WIFI_DEBUG_LOG_WARNING=
-CONFIG_ESP8266_WIFI_DEBUG_LOG_INFO=
-CONFIG_ESP8266_WIFI_DEBUG_LOG_DEBUG=
-CONFIG_ESP8266_WIFI_DEBUG_LOG_VERBOSE=
-CONFIG_ESP8266_WIFI_DEBUG_LOG_SUBMODULE=y
-CONFIG_ESP8266_WIFI_DEBUG_LOG_SUBMODULE_CORE=
-CONFIG_ESP8266_WIFI_DEBUG_LOG_SUBMODULE_SCAN=
-CONFIG_ESP8266_WIFI_DEBUG_LOG_SUBMODULE_PM=
-CONFIG_ESP8266_WIFI_DEBUG_LOG_SUBMODULE_NVS=
-CONFIG_ESP8266_WIFI_DEBUG_LOG_SUBMODULE_TRC=
-CONFIG_ESP8266_WIFI_DEBUG_LOG_SUBMODULE_EBUF=
-CONFIG_ESP8266_WIFI_DEBUG_LOG_SUBMODULE_NET80211=
-CONFIG_ESP8266_WIFI_DEBUG_LOG_SUBMODULE_TIMER=
-CONFIG_ESP8266_WIFI_DEBUG_LOG_SUBMODULE_ESPNOW=
-CONFIG_ESP8266_WIFI_DEBUG_LOG_SUBMODULE_MAC=
-CONFIG_ESP8266_WIFI_DEBUG_LOG_SUBMODULE_WPA=
-CONFIG_ESP8266_WIFI_DEBUG_LOG_SUBMODULE_WPS=y
+CONFIG_ESP8266_WIFI_DEBUG_LOG_ENABLE=
 
 #
 # PHY
@@ -249,7 +232,7 @@ CONFIG_LOG_SET_LEVEL=
 #
 # LWIP
 #
-CONFIG_LWIP_USE_IRAM=
+CONFIG_LWIP_USE_IRAM=y
 CONFIG_LWIP_HIGH_THROUGHPUT=
 CONFIG_LWIP_GLOBAL_DATA_LINK_IRAM=y
 CONFIG_TCPIP_RECVMBOX_SIZE=32
@@ -263,7 +246,7 @@ CONFIG_LWIP_ARP_MAXAGE=300
 #
 # SOCKET
 #
-CONFIG_LWIP_IPV6_MLD_SOCK=y
+CONFIG_LWIP_IPV6_MLD_SOCK=
 CONFIG_LWIP_SOCKET_MULTITHREAD=y
 CONFIG_ENABLE_NONBLOCK_SPEEDUP=
 CONFIG_SET_SOLINGER_DEFAULT=y
@@ -275,8 +258,8 @@ CONFIG_LWIP_SO_REUSE_RXTOALL=y
 CONFIG_LWIP_SO_RCVBUF=
 CONFIG_LWIP_RECV_BUFSIZE_DEFAULT=11680
 CONFIG_LWIP_TCP_CLOSE_TIMEOUT_MS_DEFAULT=10000
-CONFIG_LWIP_IP_FRAG=
-CONFIG_LWIP_IP_REASSEMBLY=
+CONFIG_LWIP_IP_FRAG=y
+CONFIG_LWIP_IP_REASSEMBLY=y
 CONFIG_LWIP_IP_REASS_MAX_PBUFS=10
 CONFIG_LWIP_IP_SOF_BROADCAST=
 CONFIG_LWIP_IP_SOF_BROADCAST_RECV=
@@ -333,7 +316,7 @@ CONFIG_LWIP_IPV6_NUM_ADDRESSES=3
 CONFIG_LWIP_IPV6_FORWARD=
 CONFIG_LWIP_IPV6_FRAG=
 CONFIG_LWIP_ND6_RDNSS_MAX_DNS_SERVERS=
-CONFIG_LWIP_STATS=
+CONFIG_LWIP_STATS=y
 CONFIG_ESP_LWIP_MEM_DBG=
 CONFIG_LWIP_DEBUG=
 
@@ -375,11 +358,17 @@ CONFIG_MDNS=y
 CONFIG_OTA=y
 CONFIG_SMARTCONFIG=y
 CONFIG_WPS=y
-CONFIG_SPIFFS=y
+CONFIG_SPIFFS=
 CONFIG_FATFS=
-CONFIG_ROMFS=
+CONFIG_ROMFS=y
 CONFIG_NOFS=
-CONFIG_MOUNT_POINT="/flash"
+
+#
+# romfs settings
+#
+CONFIG_ROMFS_FILES="en/alarms.html en/passwd.html en/shell.html update.html s20_en/index.html s20_en/config.html license copyright"
+CONFIG_ROMFS_PARTITION="storage"
+CONFIG_ROMFS_ADDR="0x321000"
 
 #
 # hardware support
@@ -428,9 +417,8 @@ CONFIG_MQTT_USING_IBM=
 # ESP-MQTT
 #
 CONFIG_MQTT_PROTOCOL_311=y
-CONFIG_MQTT_TRANSPORT_SSL=y
-CONFIG_MQTT_TRANSPORT_WEBSOCKET=y
-CONFIG_MQTT_TRANSPORT_WEBSOCKET_SECURE=y
+CONFIG_MQTT_TRANSPORT_SSL=
+CONFIG_MQTT_TRANSPORT_WEBSOCKET=
 CONFIG_MQTT_USE_CUSTOM_CONFIG=
 CONFIG_MQTT_TASK_CORE_SELECTION_ENABLED=
 CONFIG_MQTT_CUSTOM_OUTBOX=
