@@ -16,6 +16,7 @@ CONFIG_MAKE_WARN_UNDEFINED_VARIABLES=y
 # Bootloader config
 #
 CONFIG_BOOTLOADER_INIT_SPI_FLASH=y
+CONFIG_BOOTLOADER_DISABLE_JTAG_IO=
 CONFIG_LOG_BOOTLOADER_LEVEL_NONE=
 CONFIG_LOG_BOOTLOADER_LEVEL_ERROR=
 CONFIG_LOG_BOOTLOADER_LEVEL_WARN=
